clipboard section fix color contrast

--- a/style/_clipboard.scss
+++ b/style/_clipboard.scss
@@ -11,7 +11,8 @@
     }
 
     p {
-        color: $grayish-blue;
+        // color: $grayish-blue;
+        color: #525A60;
     }
 
     .buttons_container {
