--- a/style/style.css
+++ b/style/style.css
@@ -288,7 +288,7 @@ img {
   color: hsl(210deg, 10%, 33%);
 }
 .clipboard p {
-  color: hsl(201deg, 11%, 66%);
+  color: #525A60;
 }
 .clipboard .buttons_container {
   width: 100%;
